--- a/incidences/sources.yaml
+++ b/incidences/sources.yaml
@@ -8,7 +8,50 @@ sources:
     data_dir: "ci5_ix"
     format: "zip"
     default_population: "38402499"
-      
+    phenotype_mappings:
+      LungCancer: [77]
+      BreastCancer: [113]
+      ColorectalCancer: [42, 48, 49]
+      Leukemia: [226, 227, 232, 237]
+      StomachCancer: [35]
+      ProstateCancer: [151]
+      BladderCancer: [163]
+      LiverCancer: [58]
+      OvarianCancer: [133]
+      PancreaticCancer: [70]
+      NonHodgkinLymphoma: [213]
+      KidneyCancer: [160]
+      ThyroidCancer: [200]
+      CervicalCancer: [117]
+      EsophagealCancer: [23]
+      Melanoma: [100]
+    gender_mapping:
+      male: 1
+      female: 2
+    age_structure:
+      age_groups:
+        - { min: 0, max: 4 }
+        - { min: 5, max: 9 }
+        - { min: 10, max: 14 }
+        - { min: 15, max: 19 }
+        - { min: 20, max: 24 }
+        - { min: 25, max: 29 }
+        - { min: 30, max: 34 }
+        - { min: 35, max: 39 }
+        - { min: 40, max: 44 }
+        - { min: 45, max: 49 }
+        - { min: 50, max: 54 }
+        - { min: 55, max: 59 }
+        - { min: 60, max: 64 }
+        - { min: 65, max: 69 }
+        - { min: 70, max: 74 }
+        - { min: 75, max: 79 }
+        - { min: 80, max: 84 }
+        - { min: 85, max: null }  # open-ended age class
+        - { min: null, max: null }  # class for unknown age
+      unknown_age_class: 19
+      open_ended_age_class: 18
+  
   ci5_x:
     type: "online"
     description: "Cancer Incidence in Five Continents X"
@@ -16,7 +59,50 @@ sources:
     parser: "ci5_detailed_parser"
     data_dir: "ci5_x"
     format: "zip"
-  
+    phenotype_mappings:
+      LungCancer: [77]
+      BreastCancer: [113]
+      ColorectalCancer: [42, 48, 49]
+      Leukemia: [226, 227, 232, 237]
+      StomachCancer: [35]
+      ProstateCancer: [151]
+      BladderCancer: [163]
+      LiverCancer: [58]
+      OvarianCancer: [133]
+      PancreaticCancer: [70]
+      NonHodgkinLymphoma: [213]
+      KidneyCancer: [160]
+      ThyroidCancer: [200]
+      CervicalCancer: [117]
+      EsophagealCancer: [23]
+      Melanoma: [100]
+    gender_mapping:
+      male: 1
+      female: 2
+      age_structure:
+      age_groups:
+        - { min: 0, max: 4 }
+        - { min: 5, max: 9 }
+        - { min: 10, max: 14 }
+        - { min: 15, max: 19 }
+        - { min: 20, max: 24 }
+        - { min: 25, max: 29 }
+        - { min: 30, max: 34 }
+        - { min: 35, max: 39 }
+        - { min: 40, max: 44 }
+        - { min: 45, max: 49 }
+        - { min: 50, max: 54 }
+        - { min: 55, max: 59 }
+        - { min: 60, max: 64 }
+        - { min: 65, max: 69 }
+        - { min: 70, max: 74 }
+        - { min: 75, max: 79 }
+        - { min: 80, max: 84 }
+        - { min: 85, max: null }  # open-ended age class
+        - { min: null, max: null }  # class for unknown age
+      unknown_age_class: 19
+      open_ended_age_class: 18
+
   ci5_xi_summary:
     type: "online"
     description: "Cancer Incidence in Five Continents XI - summary"
@@ -24,6 +110,49 @@ sources:
     parser: "ci5_summary_parser"
     data_dir: "ci5_xi_summary"
     format: "zip"
+    phenotype_mappings:
+      LungCancer: [21]
+      BreastCancer: [29]
+      ColorectalCancer: [13, 14]
+      Leukemia: [56, 57, 58]
+      StomachCancer: [11]
+      ProstateCancer: [39]
+      BladderCancer: [45]
+      LiverCancer: [16]
+      OvarianCancer: [35]
+      PancreaticCancer: [18]
+      NonHodgkinLymphoma: [53]
+      KidneyCancer: [42]
+      ThyroidCancer: [49]
+      CervicalCancer: [32]
+      EsophagealCancer: [10]
+      Melanoma: [24]
+    gender_mapping:
+      male: 1
+      female: 2
+    age_structure:
+      age_groups:
+        - { min: 0, max: 4 }
+        - { min: 5, max: 9 }
+        - { min: 10, max: 14 }
+        - { min: 15, max: 19 }
+        - { min: 20, max: 24 }
+        - { min: 25, max: 29 }
+        - { min: 30, max: 34 }
+        - { min: 35, max: 39 }
+        - { min: 40, max: 44 }
+        - { min: 45, max: 49 }
+        - { min: 50, max: 54 }
+        - { min: 55, max: 59 }
+        - { min: 60, max: 64 }
+        - { min: 65, max: 69 }
+        - { min: 70, max: 74 }
+        - { min: 75, max: 79 }
+        - { min: 80, max: 84 }
+        - { min: 85, max: null }  # open-ended age class
+        - { min: null, max: null }  # class for unknown age
+      unknown_age_class: 19
+      open_ended_age_class: 18
 
   ci5_xi_detailed:
     type: "online"
@@ -32,7 +161,50 @@ sources:
     parser: "ci5_detailed_parser"
     data_dir: "ci5_xi_detailed"
     format: "zip"
-  
+    phenotype_mappings:
+      LungCancer: [71]
+      BreastCancer: [111]
+      ColorectalCancer: [37, 43, 44]
+      Leukemia: [224, 229, 234]
+      StomachCancer: [30]
+      ProstateCancer: [147]
+      BladderCancer: [165]
+      LiverCancer: [53]
+      OvarianCancer: [130]
+      PancreaticCancer: [65]
+      NonHodgkinLymphoma: [219]
+      KidneyCancer: [162]
+      ThyroidCancer: [200]
+      CervicalCancer: [114]
+      EsophagealCancer: [18]
+      Melanoma: [93]
+    gender_mapping:
+      male: 1
+      female: 2
+    age_structure:
+      age_groups:
+        - { min: 0, max: 4 }
+        - { min: 5, max: 9 }
+        - { min: 10, max: 14 }
+        - { min: 15, max: 19 }
+        - { min: 20, max: 24 }
+        - { min: 25, max: 29 }
+        - { min: 30, max: 34 }
+        - { min: 35, max: 39 }
+        - { min: 40, max: 44 }
+        - { min: 45, max: 49 }
+        - { min: 50, max: 54 }
+        - { min: 55, max: 59 }
+        - { min: 60, max: 64 }
+        - { min: 65, max: 69 }
+        - { min: 70, max: 74 }
+        - { min: 75, max: 79 }
+        - { min: 80, max: 84 }
+        - { min: 85, max: null }  # open-ended age class
+        - { min: null, max: null }  # class for unknown age
+      unknown_age_class: 19
+      open_ended_age_class: 18
+
   ci5_xii_summary:
     type: "online"
     description: "Cancer Incidence in Five Continents XII - summary"
@@ -40,6 +212,49 @@ sources:
     parser: "ci5_parser"
     data_dir: "ci5_xii_summary"
     format: "zip"
+    phenotype_mappings:
+      LungCancer: [21]
+      BreastCancer: [29]
+      ColorectalCancer: [13, 14]
+      Leukemia: [56, 57, 58]
+      StomachCancer: [11]
+      ProstateCancer: [39]
+      BladderCancer: [45]
+      LiverCancer: [16]
+      OvarianCancer: [35]
+      PancreaticCancer: [18]
+      NonHodgkinLymphoma: [53]
+      KidneyCancer: [42]
+      ThyroidCancer: [49]
+      CervicalCancer: [32]
+      EsophagealCancer: [10]
+      Melanoma: [24]
+    gender_mapping:
+      male: 1
+      female: 2
+    age_structure:
+      age_groups:
+        - { min: 0, max: 4 }
+        - { min: 5, max: 9 }
+        - { min: 10, max: 14 }
+        - { min: 15, max: 19 }
+        - { min: 20, max: 24 }
+        - { min: 25, max: 29 }
+        - { min: 30, max: 34 }
+        - { min: 35, max: 39 }
+        - { min: 40, max: 44 }
+        - { min: 45, max: 49 }
+        - { min: 50, max: 54 }
+        - { min: 55, max: 59 }
+        - { min: 60, max: 64 }
+        - { min: 65, max: 69 }
+        - { min: 70, max: 74 }
+        - { min: 75, max: 79 }
+        - { min: 80, max: 84 }
+        - { min: 85, max: null }  # open-ended age class
+        - { min: null, max: null }  # class for unknown age
+      unknown_age_class: 19
+      open_ended_age_class: 18
 
   ci5_xii_detailed:
     type: "online"
@@ -48,3 +263,46 @@ sources:
     parser: "ci5_summary_parser"
     data_dir: "ci5_xii_detailed"
     format: "zip"
+    phenotype_mappings:
+      LungCancer: [91]
+      BreastCancer: [159]
+      ColorectalCancer: [43, 53, 54]
+      Leukemia: [274, 279, 284]
+      StomachCancer: [33]
+      ProstateCancer: [197]
+      BladderCancer: [215]
+      LiverCancer: [65]
+      OvarianCancer: [178]
+      PancreaticCancer: [80]
+      NonHodgkinLymphoma: [269]
+      KidneyCancer: [212]
+      ThyroidCancer: [250]
+      CervicalCancer: [162]
+      EsophagealCancer: [21]
+      Melanoma: [133]
+    gender_mapping:
+      male: 1
+      female: 2
+    age_structure:
+      age_groups:
+        - { min: 0, max: 4 }
+        - { min: 5, max: 9 }
+        - { min: 10, max: 14 }
+        - { min: 15, max: 19 }
+        - { min: 20, max: 24 }
+        - { min: 25, max: 29 }
+        - { min: 30, max: 34 }
+        - { min: 35, max: 39 }
+        - { min: 40, max: 44 }
+        - { min: 45, max: 49 }
+        - { min: 50, max: 54 }
+        - { min: 55, max: 59 }
+        - { min: 60, max: 64 }
+        - { min: 65, max: 69 }
+        - { min: 70, max: 74 }
+        - { min: 75, max: 79 }
+        - { min: 80, max: 84 }
+        - { min: 85, max: null }  # open-ended age class
+        - { min: null, max: null }  # class for unknown age
+      unknown_age_class: 19
+      open_ended_age_class: 18
