--- a/incidences/sources.yaml
+++ b/incidences/sources.yaml
@@ -55,8 +55,8 @@ sources:
         - { min: 80, max: 84 }
         - { min: 85, max: null }  # open-ended age class
         - { min: null, max: null }  # class for unknown age
-      unknown_age_class: 18
-      open_ended_age_class: 17
+      unknown_age_class: 19
+      open_ended_age_class: 18
   
   ci5_x:
     type: "online"
@@ -65,6 +65,7 @@ sources:
     parser: "ci5_detailed_parser"
     data_dir: "ci5_x"
     format: "zip"
+    default_population: "38402499"
     phenotype_mappings:
       LungCancer: [77]
       BreastCancer: [113]
@@ -82,32 +83,38 @@ sources:
       CervicalCancer: [117]
       EsophagealCancer: [23]
       Melanoma: [100]
+    column_mappings:
+      gender_col: 0
+      phenotype_col: 1
+      age_col: 2
+      cases_col: 3
+      person_years_col: 4
     gender_mapping:
       male: 1
       female: 2
-      age_structure:
-        age_groups:
-          - { min: 0, max: 4 }
-          - { min: 5, max: 9 }
-          - { min: 10, max: 14 }
-          - { min: 15, max: 19 }
-          - { min: 20, max: 24 }
-          - { min: 25, max: 29 }
-          - { min: 30, max: 34 }
-          - { min: 35, max: 39 }
-          - { min: 40, max: 44 }
-          - { min: 45, max: 49 }
-          - { min: 50, max: 54 }
-          - { min: 55, max: 59 }
-          - { min: 60, max: 64 }
-          - { min: 65, max: 69 }
-          - { min: 70, max: 74 }
-          - { min: 75, max: 79 }
-          - { min: 80, max: 84 }
-          - { min: 85, max: null }  # open-ended age class
-          - { min: null, max: null }  # class for unknown age
-        unknown_age_class: 19
-        open_ended_age_class: 18
+    age_structure:
+      age_groups:
+        - { min: 0, max: 4 }
+        - { min: 5, max: 9 }
+        - { min: 10, max: 14 }
+        - { min: 15, max: 19 }
+        - { min: 20, max: 24 }
+        - { min: 25, max: 29 }
+        - { min: 30, max: 34 }
+        - { min: 35, max: 39 }
+        - { min: 40, max: 44 }
+        - { min: 45, max: 49 }
+        - { min: 50, max: 54 }
+        - { min: 55, max: 59 }
+        - { min: 60, max: 64 }
+        - { min: 65, max: 69 }
+        - { min: 70, max: 74 }
+        - { min: 75, max: 79 }
+        - { min: 80, max: 84 }
+        - { min: 85, max: null }  # open-ended age class
+        - { min: null, max: null }  # class for unknown age
+      unknown_age_class: 19
+      open_ended_age_class: 18
 
   ci5_xi_summary:
     type: "online"
@@ -167,6 +174,7 @@ sources:
     parser: "ci5_detailed_parser"
     data_dir: "ci5_xi_detailed"
     format: "zip"
+    default_population: "384002499"
     phenotype_mappings:
       LungCancer: [71]
       BreastCancer: [111]
@@ -184,6 +192,12 @@ sources:
       CervicalCancer: [114]
       EsophagealCancer: [18]
       Melanoma: [93]
+    column_mappings:
+      gender_col: 0
+      phenotype_col: 1
+      age_col: 2
+      cases_col: 3
+      person_years_col: 4
     gender_mapping:
       male: 1
       female: 2
@@ -266,9 +280,10 @@ sources:
     type: "online"
     description: "Cancer Incidence in Five Continents XII - detailed"
     url: "https://gco.iarc.fr/media/ci5/data/vol12/Download/CI5-XIId.zip"
-    parser: "ci5_summary_parser"
+    parser: "ci5_detailed_parser"
     data_dir: "ci5_xii_detailed"
     format: "zip"
+    default_population: "384002499"
     phenotype_mappings:
       LungCancer: [91]
       BreastCancer: [159]
@@ -289,6 +304,12 @@ sources:
     gender_mapping:
       male: 1
       female: 2
+    column_mappings:
+      gender_col: 0
+      phenotype_col: 1
+      age_col: 2
+      cases_col: 3
+      person_years_col: 4
     age_structure:
       age_groups:
         - { min: 0, max: 4 }
