major redesign in file and folder structure - ongoing

--- a/incidences/sources.yaml
+++ b/incidences/sources.yaml
@@ -4,7 +4,7 @@ sources:
     type: "online"
     description: "Cancer Incidence in Five Continents IX"
     url: "https://gco.iarc.fr/media/ci5/data/ci5-ix/old/vol9/CI5-IXd.zip"
-    parser: "ci5_detailed_parser"
+    parser: "ci5_detailed_incidence_model"
     data_dir: "ci5_ix"
     format: "zip"
     default_population: "38402499"
@@ -62,7 +62,7 @@ sources:
     type: "online"
     description: "Cancer Incidence in Five Continents X"
     url: "https://gco.iarc.fr/media/ci5/data/CI5-Xd.zip"
-    parser: "ci5_detailed_parser"
+    parser: "ci5_detailed_incidence_model"
     data_dir: "ci5_x"
     format: "zip"
     default_population: "38402499"
@@ -120,7 +120,7 @@ sources:
     type: "online"
     description: "Cancer Incidence in Five Continents XI - summary"
     url: "https://gco.iarc.fr/media/ci5/data/ci5-xi/CI5-XI.zip"
-    parser: "ci5_summary_parser"
+    parser: "ci5_summary_incidence_model"
     data_dir: "ci5_xi_summary"
     format: "zip"
     phenotype_mappings:
@@ -171,7 +171,7 @@ sources:
     type: "online"
     description: "Cancer Incidence in Five Continents XI - detailed"
     url: "https://gco.iarc.fr/media/ci5/data/ci5-xi/CI5-XId.zip"
-    parser: "ci5_detailed_parser"
+    parser: "ci5_detailed_incidence_model"
     data_dir: "ci5_xi_detailed"
     format: "zip"
     default_population: "384002499"
@@ -230,7 +230,7 @@ sources:
     description: "Cancer Incidence in Five Continents XII - summary"
     url: "https://gco.iarc.fr/media/ci5/data/vol12/Download/CI5-XII.zip"
     parser: "ci5_parser"
-    data_dir: "ci5_xii_summary"
+    data_dir: "ci5_summary_incidence_model"
     format: "zip"
     phenotype_mappings:
       LungCancer: [21]
@@ -280,7 +280,7 @@ sources:
     type: "online"
     description: "Cancer Incidence in Five Continents XII - detailed"
     url: "https://gco.iarc.fr/media/ci5/data/vol12/Download/CI5-XIId.zip"
-    parser: "ci5_detailed_parser"
+    parser: "ci5_detailed_incidence_model"
     data_dir: "ci5_xii_detailed"
     format: "zip"
     default_population: "384002499"
