enough for today. 4 Bugs remain so far: unknowns are empty in R. Eceryone is affected. Unaffected liability class rows are missing 2 rows per gender. f0 Risk is not null for age class 85+.

--- a/setup.cfg
+++ b/setup.cfg
@@ -32,3 +32,4 @@ console_scripts =
     crhf=bin.crhf:main
     penetrances=bin.penetrances:main
     pedconv=bin.pedconv:main
+    flb=bin.flb:main
