--- a/data_sources/incidences/sources.yaml
+++ b/data_sources/incidences/sources.yaml
@@ -1,5 +1,50 @@
 # V3/incidences/sources.yaml
 sources:
+  static_test:
+    type: "file"
+    description: "Fixed incidences for testing purposes"
+    data_dir: "tests"
+    format: "zip"
+    default_population: "i10"
+    has_header: true
+    phenotype_mappings:
+      BreastCancer: 1
+      OvarianCancer: 2
+      PancreaticCancer: 3
+      ProstateCancer: 4
+    column_mappings:
+      gender_col: 0
+      phenotype_col: 1
+      age_col: 2
+      cases_col: 3
+      person_years_col: 4
+    gender_mapping:
+      male: 1
+      female: 2
+    age_structure:
+      age_groups:
+        - { min: 0, max: 4 }
+        - { min: 5, max: 9 }
+        - { min: 10, max: 14 }
+        - { min: 15, max: 19 }
+        - { min: 20, max: 24 }
+        - { min: 25, max: 29 }
+        - { min: 30, max: 34 }
+        - { min: 35, max: 39 }
+        - { min: 40, max: 44 }
+        - { min: 45, max: 49 }
+        - { min: 50, max: 54 }
+        - { min: 55, max: 59 }
+        - { min: 60, max: 64 }
+        - { min: 65, max: 69 }
+        - { min: 70, max: 74 }
+        - { min: 75, max: 79 }
+        - { min: 80, max: 84 }
+        - { min: 85, max: null }  # open-ended age class
+        - { min: null, max: null }  # class for unknown age
+      unknown_age_class: 19
+      open_ended_age_class: 18
+
   ci5_ix:
     type: "online"
     description: "Cancer Incidence in Five Continents IX"
@@ -8,6 +53,7 @@ sources:
     data_dir: "ci5_ix"
     format: "zip"
     default_population: "38402499"
+    has_header: false
     phenotype_mappings:
       LungCancer: [77]
       BreastCancer: [113]
@@ -66,6 +112,7 @@ sources:
     data_dir: "ci5_x"
     format: "zip"
     default_population: "38402499"
+    has_header: false
     phenotype_mappings:
       LungCancer: [77]
       BreastCancer: [113]
@@ -123,6 +170,7 @@ sources:
     parser: "ci5_summary_incidence_model"
     data_dir: "ci5_xi_summary"
     format: "zip"
+    has_header: false
     phenotype_mappings:
       LungCancer: [21]
       BreastCancer: [29]
@@ -175,6 +223,7 @@ sources:
     data_dir: "ci5_xi_detailed"
     format: "zip"
     default_population: "384002499"
+    has_header: false
     phenotype_mappings:
       LungCancer: [71]
       BreastCancer: [111]
@@ -232,6 +281,7 @@ sources:
     parser: "ci5_parser"
     data_dir: "ci5_summary_incidence_model"
     format: "zip"
+    has_header: false
     phenotype_mappings:
       LungCancer: [21]
       BreastCancer: [29]
@@ -284,6 +334,7 @@ sources:
     data_dir: "ci5_xii_detailed"
     format: "zip"
     default_population: "384002499"
+    has_header: false
     phenotype_mappings:
       LungCancer: [91]
       BreastCancer: [159]
