--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 # setup.cfg
 [metadata]
-name = HerediCalc
+name = heredicalc
 version = 0.9.0
 description = A package for pedigree data handling, penetrance calculation and co-segregation analysis
 author = Benjamin Bruno
@@ -8,7 +8,7 @@ author_email = kontakt@brunomomento.de
 license = MIT
 long_description = file: README.md
 long_description_content_type = text/markdown
-#url = https://example.com/HerediCalc
+url = github.com/leckermatz79/heredicalc
 
 [options]
 packages = find:
