setup.cfg updated

--- a/setup.cfg
+++ b/setup.cfg
@@ -26,10 +26,10 @@ where = src
 
 [options.entry_points]
 console_scripts =
-    incidences=bin.incidences:main
-    cumulative_risks=bin.cumulative_risks:main
-    relative_risks=bin.relative_risks:main
-    crhf=bin.crhf:main
-    penetrances=bin.penetrances:main
-    pedconv=bin.pedconv:main
-    flb=bin.flb:main
+    incidences=heredicalc.bin.incidences:main
+    cumulative_risks=heredicalc.bin.cumulative_risks:main
+    relative_risks=heredicalc.bin.relative_risks:main
+    crhf=heredicalc.bin.crhf:main
+    penetrances=heredicalc.bin.penetrances:main
+    pedconv=heredicalc.bin.pedconv:main
+    flb=heredicalc.bin.flb:main
