added cohort infomration to sources.yaml

--- a/data_sources/incidences/sources.yaml
+++ b/data_sources/incidences/sources.yaml
@@ -49,6 +49,7 @@ sources:
     type: "online"
     description: "Cancer Incidence in Five Continents IX (1998-2002)"
     url: "https://gco.iarc.fr/media/ci5/data/ci5-ix/old/vol9/CI5-IXd.zip"
+    cohort: "1998-2002"
     parser: "ci5_detailed_incidence_model"
     data_dir: "ci5_ix"
     format: "zip"
@@ -108,6 +109,7 @@ sources:
     type: "online"
     description: "Cancer Incidence in Five Continents X"
     url: "https://gco.iarc.fr/media/ci5/data/CI5-Xd.zip"
+    cohort: "2003-2007"
     parser: "ci5_detailed_incidence_model"
     data_dir: "ci5_x"
     format: "zip"
@@ -167,6 +169,7 @@ sources:
     type: "online"
     description: "Cancer Incidence in Five Continents XI - summary"
     url: "https://gco.iarc.fr/media/ci5/data/ci5-xi/CI5-XI.zip"
+    cohort: "2008-2012"
     parser: "ci5_summary_incidence_model"
     data_dir: "ci5_xi_summary"
     format: "zip"
@@ -219,6 +222,7 @@ sources:
     type: "online"
     description: "Cancer Incidence in Five Continents XI - detailed (2008-2012)"
     url: "https://gco.iarc.fr/media/ci5/data/ci5-xi/CI5-XId.zip"
+    cohort: "2008-2012"
     parser: "ci5_detailed_incidence_model"
     data_dir: "ci5_xi_detailed"
     format: "zip"
@@ -278,6 +282,7 @@ sources:
     type: "online"
     description: "Cancer Incidence in Five Continents XII - summary"
     url: "https://gco.iarc.fr/media/ci5/data/vol12/Download/CI5-XII.zip"
+    cohort: "2013-2017"
     parser: "ci5_parser"
     data_dir: "ci5_summary_incidence_model"
     format: "zip"
@@ -330,6 +335,7 @@ sources:
     type: "online"
     description: "Cancer Incidence in Five Continents XII - detailed"
     url: "https://gco.iarc.fr/media/ci5/data/vol12/Download/CI5-XIId.zip"
+    cohort: "2013-2017"
     parser: "ci5_detailed_incidence_model"
     data_dir: "ci5_xii_detailed"
     format: "zip"
