--- a/data_sources/incidences/sources.yaml
+++ b/data_sources/incidences/sources.yaml
@@ -1,50 +1,5 @@
 # V3/incidences/sources.yaml
 sources:
-  static_test:
-    type: "file"
-    description: "Fixed incidences for testing purposes"
-    data_dir: "tests"
-    format: "zip"
-    default_population: "i10"
-    has_header: true
-    phenotype_mappings:
-      BreastCancer: 1
-      OvarianCancer: 2
-      PancreaticCancer: 3
-      ProstateCancer: 4
-    column_mappings:
-      gender_col: 0
-      phenotype_col: 1
-      age_col: 2
-      cases_col: 3
-      person_years_col: 4
-    gender_mapping:
-      male: 1
-      female: 2
-    age_structure:
-      age_groups:
-        - { min: 0, max: 4 }
-        - { min: 5, max: 9 }
-        - { min: 10, max: 14 }
-        - { min: 15, max: 19 }
-        - { min: 20, max: 24 }
-        - { min: 25, max: 29 }
-        - { min: 30, max: 34 }
-        - { min: 35, max: 39 }
-        - { min: 40, max: 44 }
-        - { min: 45, max: 49 }
-        - { min: 50, max: 54 }
-        - { min: 55, max: 59 }
-        - { min: 60, max: 64 }
-        - { min: 65, max: 69 }
-        - { min: 70, max: 74 }
-        - { min: 75, max: 79 }
-        - { min: 80, max: 84 }
-        - { min: 85, max: null }  # open-ended age class
-        - { min: null, max: null }  # class for unknown age
-      unknown_age_class: 19
-      open_ended_age_class: 18
-
   ci5_ix:
     type: "online"
     description: "Cancer Incidence in Five Continents IX (1998-2002)"
@@ -55,6 +10,197 @@ sources:
     format: "zip"
     default_population: "38402499"
     has_header: false
+    age_structure:
+      age_groups:
+        - min: 0
+          max: 4
+        - min: 5
+          max: 9
+        - min: 10
+          max: 14
+        - min: 15
+          max: 19
+        - min: 20
+          max: 24
+        - min: 25
+          max: 29
+        - min: 30
+          max: 34
+        - min: 35
+          max: 39
+        - min: 40
+          max: 44
+        - min: 45
+          max: 49
+        - min: 50
+          max: 54
+        - min: 55
+          max: 59
+        - min: 60
+          max: 64
+        - min: 65
+          max: 69
+        - min: 70
+          max: 74
+        - min: 75
+          max: 79
+        - min: 80
+          max: 84
+        - min: 85
+          max: null  # open-ended age class
+        - min: null
+          max: null  # class for unknown age
+      unknown_age_class: 19
+      open_ended_age_class: 18
+    population_mappings:
+      - population_id: 10120199
+        cool_label: Algeria
+        description: Algeria
+      - population_id: 17160270
+        cool_label: Zimbabwe
+        description: Zimbabwe
+      - population_id: 18000299
+        cool_label: Uganda
+        description: Uganda
+      - population_id: 20320199
+        cool_label: Argentina
+        description: Argentina
+      - population_id: 20760899
+        cool_label: Brazil
+        description: "*Brazil (Sao Paolo)"
+      - population_id: 21700199
+        cool_label: Colombia
+        description: Colombia
+      - population_id: 21880099
+        cool_label: CostaRica
+        description: CostaRica
+      - population_id: 22180199
+        cool_label: Ecuador
+        description: Ecuador
+      - population_id: 31240099
+        cool_label: Canada
+        description: Canada
+      - population_id: 38400942
+        cool_label: US_Natives
+        description: "*USA, New Mexico: American Indian"
+      - population_id: 38402450
+        cool_label: US_Hispanic
+        description: "*USA, SEER (14 Registries): Hispanic White"
+      - population_id: 38402429
+        cool_label: US_Asian
+        description: "*USA, SEER (14 Registries): Asian and Pacific Islander"
+      - population_id: 38402010
+        cool_label: US_White
+        description: "*USA, SEER (9 Registries): White"
+      - population_id: 38402030
+        cool_label: US_Black
+        description: "*USA, SEER (9 Registries): Black"
+      - population_id: 41560399
+        cool_label: China
+        description: "*China, Shanghai"
+      - population_id: 43560399
+        cool_label: India
+        description: "*India, Mumbai (Bombay)"
+      - population_id: 43760090
+        cool_label: Israel_Jews
+        description: "Israel: Jews"
+      - population_id: 43760099
+        cool_label: Israel
+        description: "Israel: Non-Jews"
+      - population_id: 43920299
+        cool_label: Japan
+        description: "*Japan, Miyagi Prefecture"
+      - population_id: 44100099
+        cool_label: Korea
+        description: Korea
+      - population_id: 44140025
+        cool_label: Kuwait
+        description: "*Kuwait: Kuwaitis"
+      - population_id: 46080299
+        cool_label: Philippines
+        description: Philippines
+      - population_id: 47640199
+        cool_label: Thailand
+        description: "*Thailand, Chiang Mai"
+      - population_id: 50400099
+        cool_label: Austria
+        description: Austria
+      - population_id: 50560499
+        cool_label: Belgium
+        description: "*Belgium, Antwerp*"
+      - population_id: 51120099
+        cool_label: Belarus
+        description: Belarus
+      - population_id: 51910099
+        cool_label: Croatia
+        description: Croatia
+      - population_id: 52030099
+        cool_label: Czech
+        description: "Czech Republic"
+      - population_id: 52080099
+        cool_label: Denmark
+        description: Denmark
+      - population_id: 52330099
+        cool_label: Estonia
+        description: Estonia
+      - population_id: 52500199
+        cool_label: France
+        description: "*France, Bas-Rhin"
+      - population_id: 52760299
+        cool_label: Germany
+        description: "*Germany, Hamburg"
+      - population_id: 53520099
+        cool_label: Iceland
+        description: Iceland
+      - population_id: 53720099
+        cool_label: Ireland
+        description: Ireland
+      - population_id: 53800199
+        cool_label: Italy
+        description: "*Italy, Florence and Prato"
+      - population_id: 54280099
+        cool_label: Latvia
+        description: Latvia
+      - population_id: 54400099
+        cool_label: Lithuania
+        description: Lithuania
+      - population_id: 54700099
+        cool_label: Malta
+        description: Malta
+      - population_id: 55280099
+        cool_label: Netherlands
+        description: Netherlands
+      - population_id: 55780099
+        cool_label: Norway
+        description: Norway
+      - population_id: 56160199
+        cool_label: Poland
+        description: "*Poland, Cracow"
+      - population_id: 56200499
+        cool_label: Portugal
+        description: "*Portugal, Porto"
+      - population_id: 57050099
+        cool_label: Slovenia
+        description: Slovenia
+      - population_id: 57240299
+        cool_label: Spain
+        description: "*Spain, Granada"
+      - population_id: 57560299
+        cool_label: Switzerland
+        description: "*Switzerland, Geneva"
+      - population_id: 57920299
+        cool_label: Turkey
+        description: "*Turkey, Antalya"
+      - population_id: 58260699
+        cool_label: UK
+        description: "*UK, England, South and Western Regions"
+      - population_id: 60360499
+        cool_label: Australia
+        description: "*Australia, South"
+      - population_id: 65540099
+        cool_label: NewZealand
+        description: NewZealand
+
     phenotype_mappings:
       LungCancer: [77]
       BreastCancer: [113]
@@ -81,29 +227,7 @@ sources:
     gender_mapping:
       male: 1
       female: 2
-    age_structure:
-      age_groups:
-        - { min: 0, max: 4 }
-        - { min: 5, max: 9 }
-        - { min: 10, max: 14 }
-        - { min: 15, max: 19 }
-        - { min: 20, max: 24 }
-        - { min: 25, max: 29 }
-        - { min: 30, max: 34 }
-        - { min: 35, max: 39 }
-        - { min: 40, max: 44 }
-        - { min: 45, max: 49 }
-        - { min: 50, max: 54 }
-        - { min: 55, max: 59 }
-        - { min: 60, max: 64 }
-        - { min: 65, max: 69 }
-        - { min: 70, max: 74 }
-        - { min: 75, max: 79 }
-        - { min: 80, max: 84 }
-        - { min: 85, max: null }  # open-ended age class
-        - { min: null, max: null }  # class for unknown age
-      unknown_age_class: 19
-      open_ended_age_class: 18
+    
   
   ci5_x:
     type: "online"
@@ -390,3 +514,48 @@ sources:
         - { min: null, max: null }  # class for unknown age
       unknown_age_class: 19
       open_ended_age_class: 18
+    static_test:
+    type: "file"
+    description: "Fixed incidences for testing purposes"
+    data_dir: "tests"
+    format: "zip"
+    default_population: "i10"
+    has_header: true
+    phenotype_mappings:
+      BreastCancer: 1
+      OvarianCancer: 2
+      PancreaticCancer: 3
+      ProstateCancer: 4
+    column_mappings:
+      gender_col: 0
+      phenotype_col: 1
+      age_col: 2
+      cases_col: 3
+      person_years_col: 4
+    gender_mapping:
+      male: 1
+      female: 2
+    age_structure:
+      age_groups:
+        - { min: 0, max: 4 }
+        - { min: 5, max: 9 }
+        - { min: 10, max: 14 }
+        - { min: 15, max: 19 }
+        - { min: 20, max: 24 }
+        - { min: 25, max: 29 }
+        - { min: 30, max: 34 }
+        - { min: 35, max: 39 }
+        - { min: 40, max: 44 }
+        - { min: 45, max: 49 }
+        - { min: 50, max: 54 }
+        - { min: 55, max: 59 }
+        - { min: 60, max: 64 }
+        - { min: 65, max: 69 }
+        - { min: 70, max: 74 }
+        - { min: 75, max: 79 }
+        - { min: 80, max: 84 }
+        - { min: 85, max: null }  # open-ended age class
+        - { min: null, max: null }  # class for unknown age
+      unknown_age_class: 19
+      open_ended_age_class: 18
+
